feature: Add opencart at required

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "composer-plugin",
     "require": {
         "composer-plugin-api": "^2.0",
-        "symfony/filesystem": "^5.4.13"
+        "opencart/opencart": ">=2.2 <4"
     },
     "license": "MIT",
     "authors": [
