--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "composer-plugin",
     "require": {
         "composer-plugin-api": "^2.0",
-        "opencart/opencart": ">=2.2 <4"
+        "opencart/opencart": "^3.0.3.8"
     },
     "license": "MIT",
     "authors": [
