--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "composer-plugin",
     "require": {
         "composer-plugin-api": "~2",
-        "opencart/opencart": "^3.0.3.8"
+        "opencart/opencart": "^3.0.3.8",
+        "symfony/filesystem": "^v5.4.13"
     },
     "license": "MIT",
     "authors": [
