--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         }
     ],
     "require": {
-        "composer-plugin-api": "^1.1 || ^2.0",
-        "opencart/opencart": ">=2.2 <4"
+        "composer-plugin-api": "^2.0",
+        "opencart/opencart": "3.0.3.8"
     },
     "require-dev": {
-        "composer/composer": "^1.9 || ^2.0",
+        "composer/composer": "^2.0",
         "phpunit/phpunit": "^9"
     },
     "autoload": {
