feature: Add opencart all versions

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "composer-plugin-api": "^1.1 || ^2.0",
-        "opencart/opencart": "3.0.3.8"
+        "opencart/opencart": ">=2.2 <4"
     },
     "require-dev": {
         "composer/composer": "^1.9 || ^2.0",
